fixed button alignments

--- a/src/css/styling.css
+++ b/src/css/styling.css
@@ -57,7 +57,7 @@ li:active {
     max-width: fit-content;
     margin-left: auto;
     margin-right: auto;
-    text-align: center;
+    /* text-align: center; */
 }
 
 .center p {
@@ -117,6 +117,41 @@ li:active {
     user-select: none;
 }
 
+.btn-secondary {
+    font-size: 100%;
+    line-height: 1em;
+    font-weight: bold;
+    white-space: nowrap;
+    
+    /* box stats */
+    /* margin-top: 30px; */
+    width: 130px;
+    margin: 0px 10px;
+    border: 0px;
+    border-radius: 100px; /* rounds out edges */
+    padding: 15px 20px;
+    
+    color:white;
+    text-shadow: 0 0 5px black ;
+    /* pointer-events: none; */
+    user-select: none;
+
+    /* background-image: linear-gradient(to right, var(--color-white) 0%, var(--color-white) 50%, var(--color-primary) 50%, var(--color-primary) 100%);
+    color: var(--color-white); */
+    background-color: red;
+    transition: all .2s;
+  }
+  
+  .btn-secondary:hover {
+    transform: scale(1.1);
+  }
+  
+  .btn-secondary:active {
+    transition: all 0.1s;
+    transform: scale(1.0);
+    background-color: white;
+  }
+
 .difficulty-select {
     margin-top: 60px;
 }
@@ -146,9 +181,8 @@ li:active {
 /* /////////////////////// */
 #kdk-buttons-container {
     width: 100%;
-    align-items:flex-start;
-    justify-content: center;
-    display:inline
+    /* align-items:flex-start;
+    justify-content: center; */
 }
 
 /* //////////////////////////// */
